--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
+    "date-fns": "^4.1.0",
     "fullusdtasia": "file:..",
     "jwt-decode": "^4.0.0",
     "node-sass": "^9.0.0",
