--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "fullusdtasia": "file:..",
     "jwt-decode": "^4.0.0",
     "node-sass": "^9.0.0",
+    "qrcode.react": "^4.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.2",
