--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
     "fullusdtasia": "file:..",
+    "i18next": "^23.16.0",
     "jwt-decode": "^4.0.0",
     "node-sass": "^9.0.0",
     "qrcode.react": "^4.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^15.0.3",
     "react-redux": "^9.1.2",
     "react-scripts": "^5.0.1",
     "redux": "^5.0.1",
