--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.4.5",
     "fullusdtasia": "file:..",
     "i18next": "^23.16.0",
     "jwt-decode": "^4.0.0",
